--- a/ConsoleApplication12/ConsoleApplication12.vcxproj
+++ b/ConsoleApplication12/ConsoleApplication12.vcxproj
@@ -147,6 +147,7 @@
     </ClCompile>
     <ClCompile Include="18.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="소스.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RuntimeFrameWokr.h" />
