--- a/ConsoleApplication12/ConsoleApplication12.vcxproj.filters
+++ b/ConsoleApplication12/ConsoleApplication12.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="소스.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
